# games-cpp

./: .gitignore  CMakeLists.txt  README.md
src/algorithms/: CMakeLists.txt  mcts.cpp  mcts.hpp  minimax.cpp  minimax.h
src/games/: CMakeLists.txt
src/games/connectFour/: connectFour.cpp  connectFourBoard.cpp  connectFourBoard.hpp
